approve and rejected student
